tests/NormalTests/paczka1/fuzzy1/64219521.err
Error in line 3: 2iZFUq A921 46,3
Error in line 8: ygCybw S334 70,5
Error in line 18: ygCybw S334 46,97
Error in line 17: ygCybw S427 180,8
Error in line 21: ygCybw S334 195,7
Error in line 19: JB5G A268 10,7
Error in line 24: ygCybw A268 168,6
Error in line 32: psQecve3 S427 303,7
Error in line 27: JB5G S334 16,7
